--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     function testAPI() {
         console.log('Welcome!  Fetching your information.... ');
         FB.api('/me', function(response) {
-        console.log('Response Object : ' + response);
+        console.log('Response Object : ' + JSON.stringify(response));
         console.log('Successful login for: ' + response.name);
         document.getElementById('status').innerHTML =
             'Thanks for logging in, ' + response.name + '!';
