--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
 
     function testAPI() {
         console.log('Welcome!  Fetching your information.... ');
-        FB.api('/me', function(response) {
+        FB.api('/me', {fields: 'id,first_name,last_name,email'}, function(response) {
         console.log('Response Object : ' + JSON.parse(response));
-        console.log('Successful login for: ' + response.name);
+        console.log('Successful login for: ' + response.email);
         document.getElementById('status').innerHTML =
             'Thanks for logging in, ' + response.name + '!';
         });
