--- a/index.html
+++ b/index.html
@@ -49,7 +49,7 @@
         console.log('Welcome!  Fetching your information.... ');
         FB.api('/me', {fields: 'id,first_name,last_name,email'}, function(response) {
         console.log('Response Object : ' + JSON.parse(response));
-        console.log('Successful login for: ' + response.email);
+        console.log('Successful login for: ' + response.name);
         document.getElementById('status').innerHTML =
             'Thanks for logging in, ' + response.name + '!';
         });
