--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     function testAPI() {
         console.log('Welcome!  Fetching your information.... ');
-        FB.api('/me', {fields: 'id,first_name,last_name,email'}, function(response) {
+        FB.api('/me', NULL, {fields: 'email'}, function(response) {
         console.log('Response Object : ' + JSON.parse(response));
         console.log('Successful login for: ' + response.name);
         document.getElementById('status').innerHTML =
