--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     function testAPI() {
         console.log('Welcome!  Fetching your information.... ');
         FB.api('/me', {fields: 'email'}, function(response) {
-        console.log('Successful login for: ' + response.name);
+        console.log('Successful login for: ' + response.email);
         document.getElementById('status').innerHTML =
             'Thanks for logging in, ' + response.name + '!';
         });
