--- a/index.html
+++ b/index.html
@@ -47,7 +47,7 @@
 
     function testAPI() {
         console.log('Welcome!  Fetching your information.... ');
-        FB.api('/me', {fields: 'email'}, function(response) {
+        FB.api('/me', function(response) {
         console.log('Successful login for: ' + response.email);
         document.getElementById('status').innerHTML =
             'Thanks for logging in, ' + response.name + '!';
