--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
     function testAPI() {
         console.log('Welcome!  Fetching your information.... ');
         FB.api('/me', 'get', {fields: 'id,name,gender,email' }, function(response) {
-        console.log('Successful login for: ' + JSON.parse(response));
+        console.log('Successful login for: ' + response);
         document.getElementById('status').innerHTML =
             'Thanks for logging in, ' + response.email + '!';
         });
