--- a/index.html
+++ b/index.html
@@ -47,10 +47,10 @@
 
     function testAPI() {
         console.log('Welcome!  Fetching your information.... ');
-        FB.api('/me', 'get', {fields: 'id,name,gender,first_name,last_name' }, function(response) {
-        console.log('Successful login for: ' + JSON.parse(response));
+        FB.api('/me', 'get', {fields: 'id,name,gender,email,first_name,last_name' }, function(response) {
+        console.log('Successful login for: ' + response);
         document.getElementById('status').innerHTML =
-            'Thanks for logging in, ' + response.first_name + '!';
+            'Thanks for logging in, ' + response.email + '!';
         });
     }
 
