--- a/index.html
+++ b/index.html
@@ -48,9 +48,13 @@
     function testAPI() {
         console.log('Welcome!  Fetching your information.... ');
         FB.api('/me', 'get', {fields: 'id,name,gender,email,first_name,last_name' }, function(response) {
-        console.log('Successful login for: ' + JSON.parse(response));
+        console.log('Successful login for: ' + response.id);
+        console.log('Gender : ' + response.gender);
+        console.log('Email : ' + response.name);
+        console.log('First Name : ' + response.name);
+        console.log('Last Name : ' + response.name);
         document.getElementById('status').innerHTML =
-            'Thanks for logging in, ' + response.email + '!';
+            'Thanks for logging in, ' + response.name + '!';
         });
     }
 
