--- a/index.html
+++ b/index.html
@@ -64,6 +64,8 @@
 <fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>
 
+<button id="logout" onclick="FB.logout()">Logout</button>
+
 
 <div id="status">
 </div>
