--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 </script>
 <!-- New Entry -->
 
-<fb:login-button scope="public_profile,email" onlogin="checkLoginState();">
+<fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>
 
 <button id="logout" onclick="FB.logout()">Logout</button>
