--- a/index.html
+++ b/index.html
@@ -74,7 +74,8 @@
 <fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>
 
-<button onclick="fbLogoutUser()">Logout</button>
+<button onclick="javascript:FB.logout(function() { window.location.reload() }); return false;"
+>Logout</button>
 
 <div id="status">
 </div>
