--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         FB.getLoginStatus(function(response) {
             if (response && response.status === 'connected') {
                 FB.logout(function(response) {
+                    console.log('Logout Successful');
                     document.location.reload();
                 });
             }
