--- a/index.html
+++ b/index.html
@@ -46,6 +46,7 @@
     }
 
     function testAPI() {
+        document.location.reload();
         console.log('Welcome!  Fetching your information.... ');
         FB.api('/me', 'get', {fields: 'id,name,gender,email,first_name,last_name' }, function(response) {
         console.log('Successful login for: ' + response.id);
