--- a/index.html
+++ b/index.html
@@ -75,8 +75,7 @@
 <fb:login-button autologoutlink="true" scope="public_profile,email" onlogin="checkLoginState();">
 </fb:login-button>
 
-<!--<button onclick="javascript:FB.logout(function() { window.location.reload() }); return false;"
->Logout</button>-->
+<button onclick="fbLogoutUser()">Logout</button>
 
 <div id="status">
 </div>
